--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>{{ site.name }}</title>
+		<title>{{ site.title }}</title>
 	</head>
 	<body>
 		<div class="navbar">NAVBAR</div>
