--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<title>{{ site.title }}</title>
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 	</head>
 	<body>
 		<div class="navbar">NAVBAR</div>
