--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
 <!--     [if lt IE 9]>
 <!--       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> -->
-<!--     <![endif]--> -->
+<!--     <![endif]-->
 
 <!--     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" /> -->
 <!--     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" /> -->
@@ -46,7 +46,7 @@
 <!--       </div> -->
 <!--     </div> -->
 
-<!-- <!--     {% include analytics.html %} --> -->
+<!--     {% include analytics.html %} --> 
 <!--   </body> -->
 <!-- </html> -->
 
@@ -54,7 +54,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="utf-8" /> 
+<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
+<meta name="format-detection" content="telephone=no"/>
 <title>vue</title>
 <link rel="stylesheet" href="./resources/css/default.css" type="text/css" />
 <script src="./resources/js/vue.js"></script>
